# log_macro

./: Cargo.toml
log_impl/: Cargo.toml
log_impl/src/: lib.rs
src/: lib.rs
