[package]
name = "macro_log"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
quote = { version = "1.0" }
syn = { version = "2.0", features = [
    "full",
    "extra-traits",
    "parsing",
    "visit-mut",
] }
log_impl = { path = "./log_impl" }
darling = "0.20.11"
proc-macro2 = "1.0.95"
